# wandelscript

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  README.md  mypy.ini  pyproject.toml  ruff.toml  tox.ini
.github/: CODEOWNERS
.github/workflows/: ci-dev.yaml  pr-title-check.yaml  release.yaml  yamllint.yaml
examples/: 01_basic.py  01_basic.ws  02_ffi_python.py  02_ffi_python.ws  02_use_python.py  02_use_python.ws  README.md
scripts/: generate_parser.sh
wandelscript/: __init__.py  __main__.py  _types.py  action_queue.py  antlrvisitor.py  builtins.ws  cli.py  datatypes.py  examples.py  exception.py  ffi.py  frames.py  metamodel.py  migration.py  models.py  motions.py  operators.py  plugins_addons.py  plugins_addons.ws  runner.py  runtime.py  serializer.py  simulation.py  types.py  utils.py  version.py
wandelscript/builtins/: __init__.py  array.py  assoc.py  collider.py  controller.py  fetch.py  fs.py  image.py  kinematic.py  math.py  opcua.py  pose.py  string.py  wait.py
wandelscript/examples/: and_or.json  and_or.ws  array.json  array.ws  assignment.json  async_write.json  async_write.ws  blending.json  blending.ws  bool_negation.json  bool_negation.ws  builtins.json  builtins.ws  collision_scene.cell.json  collision_scene.json  comments.json  context.json  controller.cell.json  controller.json  controller.ws  coordinate_systems.json  default.cell.json  default.ws  edge_pattern.json  edge_pattern_line.json  edge_pattern_line.ws  edge_pattern_manhattan.json  expressions.json  fetch.json  fetch.ws  find_edge_from_4_poses.json  find_edge_from_4_poses.ws  frame.json  frame.ws  frame2.json  frame3.cell.json  frame3.ws  function.json  function.ws  functional_pose.json  (+54 more)
wandelscript/grammar/: WandelscriptLexerBase.py  wandelscriptLexer.g4  wandelscriptLexer.interp  wandelscriptLexer.py  wandelscriptLexer.tokens  wandelscriptParser.g4  wandelscriptParser.interp  wandelscriptParser.py  wandelscriptParserListener.py  wandelscriptParserVisitor.py
wandelscript/grammar/reports/: pytest.xml
wandelscript/tests/: test_action_queue.py  test_builtins.py  test_database.py  test_datatypes.py  test_examples.py  test_executor.py  test_ffi.py  test_migration.py  test_motion.py  test_move.py  test_multirobot.py  test_opc_ua.py  test_parser.py  test_plugin_client.py  test_plugins.py  test_programs.py  test_run_twice.py  test_runner.py  test_runtime.py  test_simulation.py  test_stepwise.py  test_store.py  test_two_step_execution.py  test_types.py
wandelscript/tests/reports/: pytest.xml
wandelscript/utils/: json_decode.py  pose.py  serializer.py
