[tool.poetry]
name = "wandelscript"
version = '0.1.0'
description = "Wandelscript definition, parser, type checker & runtime"
authors = [
    "Christoph Biering <christoph.biering@wandelbots.com>",
    "Daniel Vorberg",
    "Dirk Sonnemann <dirk.sonnemann@wandelbots.com>",
    "Andreas Langenhagen <andreas.langenhagen@wandelbots.com>",
    "Mahsum Demir <mahsum.demir@wandelbots.com>"
]
readme = "README.md"
packages = [
    { include = "wandelscript" }
]

[tool.poetry.dependencies]
python = "^3.10"
aiostream = "^0.6.1"
antlr4-python3-runtime = "4.13.1"
anyio = "^4"
numpy = "^2.2.1"
pydantic = "^2.10.3"
wandelbots-nova = "^0.35.0"
exceptiongroup = "^1.2.2"
geometricalgebra = "^0.1.3"
# TODO: would like to remove this dependency
pillow = "^11.1.0"
# TODO: move to wandelbots-nova
asyncua = "^1.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
mypy = "^1.13.0"
ruff = "^0.8.2"
darglint = "1.8.1"
icecream = "2.1.3"
pytest-loguru = "0.2.0"
pytest-asyncio = "0.23.6"
antlr4-tools = "^0.2.1"
wat-inspector = "^0.4.0"
pre-commit = "^4.0.1"

[tool.pytest.ini_options]
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
addopts = """
    --doctest-modules
    --junitxml=reports/pytest.xml
    --ignore=wandelscript/tests/test_plugin_client.py
"""
junit_family = "xunit2"
norecursedirs = "develop .ipynb_checkpoints .venv .tox *.egg"
testpaths = """
    wandelscript
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
